Bug 508146: update GetUpvarOnTrace stack arithmetic for inclusion of arguments, r=gal